--- a/myportfolio copy.html
+++ b/myportfolio copy.html
@@ -33,47 +33,17 @@
         </div>
       </header>
 
-    <main class="beanbuddy-page">
-        <h1>Bean Buddy</h1>
+    <main class="Portfolio-page">
+        <h1>Webdesign| UX Design Portfolio</h1>
+        <br>
+        <br>
         <br>
         <br>
 
         <div>
-            <img src="img/projectthumbnail_1200.png" alt="beanbuddythumbnail" width="1200">
+            <img src="img/Porfoliocasestudy.png" alt="Porfoliocasestudy" width="1200">
         </div>
-        <div>
-            <img src="img/Behance/2.png" alt="beanbuddyintro" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/3.png" alt="beanbuddycontent1" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/4.png" alt="beanbuddycontent2" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/5.png" alt="beanbuddycontent3" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/6.png" alt="beanbuddycontent4" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/7.png" alt="beanbuddycontent5" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/8.png" alt="beanbuddycontent6" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/9.png" alt="beanbuddycontent7" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/10.png" alt="beanbuddycontent8" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/11.png" alt="beanbuddycontent9" width="1200">
-        </div>
-        <div>
-            <img src="img/Behance/12.png" alt="beanbuddycontent10" width="1200">
-        </div>
+        
     </main>
 
     <!-- Contact -->
