--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <ul id="menu" class="nav-items">
                 <li><a href="index.html">home</a></li>
                 <li><a href="index.html#work">my work</a></li>
+                <li> <a href="Catherine Abraham CV.pdf" class="primary-button" target="_blank">my cv</a></li>
                 <li><a href="aboutme.html">about me</a></li>
                 <li><a href="#contact">contact</a></li>
                 <li>
