--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,7 @@
                     I’d like my work to connect to a deeper purpose—improving lives and leaving the world 
                     better than I found it.
                 </p>
-                <a href="pdf/portfolioCV.pdf" class="primary-button" target="_blank">My CV</a>
+                <a href="Catherine Abraham CV.pdf" class="primary-button" target="_blank">My CV</a>
             </section>
 
             <section id="skills-tools" class="text">
