--- a/aboutme.html
+++ b/aboutme.html
@@ -18,10 +18,11 @@
             <div class="navtoggle" id="myNavtoggle">
                 <nav>
                     <ul id="menu" class="nav-items">
-                        <li><a href="index.html">home</a></li>
-                        <li><a href="index.html#work">my work</a></li>
-                        <li><a href="aboutme.html">about me</a></li>
-                        <li><a href="#contact">contact</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="index.html#work">my work</a></li>
+                <li> <a href="pdf/Catherine Abraham CV.pdf">my cv</a></li>
+                <li><a href="aboutme.html">about me</a></li>
+                <li><a href="contact.html">contact</a></li>
                         <li>
                             <a href="javascript:void(0);" class="icon" onclick="menuToggle()">
                                 <i class="fas fa-bars"></i>
@@ -39,22 +40,19 @@
                 <h1 class="meet">UX designer</h1>
             </div>
             <div id="aboutright">
-                <img src="img/Avatar.png" alt="avatar" id="avatar">
+                <img src="img/profile.jpeg" alt="avatar" id="avatar">
             </div>
         </section>
 
         <div class="container">
             <section id="story" class="text">
-                <h2>Who I am</h2>
-                <p>
-                    Hi there! I'm a Cat. I'm a UX designer and researcher. My goal when designing is to
-                    create experiences that are user-focused. User research and usability testing is my 'happy place';
-                    getting to talk to users and really dig into what their needs, wants, and goals are is my favourite part
-                    of the process. I’m committed to continuous growth and delivering work that meets the highest 
-                    standards. Whether zooming out to align with broader strategies or diving deep 
-                    into the nuances, I approach every project holistically and cross-functionally. 
-                    I’d like my work to connect to a deeper purpose—improving lives and leaving the world 
-                    better than I found it.
+                <h2>this is me</h2>
+                <p> Hi there, I’m Cat<br>
+<br>UX designer and passionate researcher with a background in recruitment, marketing strategy and language education. My work has always centred around people: understanding what they need, creating experiences that resonate and making sure nothing feels one-size-fits-all.<br><br>
+That’s what led me to UX. My ‘happy place’ is user research synthesis; uncovering what’s really going on beneath the surface and using those insights to design purposeful, intuitive solutions. Whether I’m building out user flows or refining a prototype, I approach every challenge with curiosity, structure and empathy.
+<br><br>Before design, I ran onboarding programs at CHANEL as the primary recruiter, created content and hosted community events at a retail developer and taught English to very energetic toddlers; I bring those same skills into my design work: clear communication, thoughtful organisation and the ability to adapt quickly.
+<br><br>Outside of design, you’ll find me reading webtoons, dabbling in ceramics or on a never-ending quest to find the best flat white in town. 
+
                 </p>
                 <a href="Catherine Abraham CV.pdf" class="primary-button" target="_blank">My CV</a>
             </section>
