--- a/myportfolio.html
+++ b/myportfolio.html
@@ -20,8 +20,9 @@
               <ul id="menu" class="nav-items">
                 <li><a href="index.html">home</a></li>
                 <li><a href="index.html#work">my work</a></li>
+                <li> <a href="pdf/Catherine Abraham CV.pdf">my cv</a></li>
                 <li><a href="aboutme.html">about me</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="contact.html">contact</a></li>
                 <li>
                   <a href="javascript:void(0);" class="icon" onclick="menuToggle()">
                     <i class="fas fa-bars"></i>
@@ -34,14 +35,14 @@
       </header>
 
     <main class="Portfolio-page">
-        <h1>Webdesign| UX Design Portfolio</h1>
+        <h1>Web design| UX Design Portfolio</h1>
         <br>
         <br>
         <br>
         <br>
 
         <div>
-            <img src="img/Porfoliocasestudy.png" alt="Porfoliocasestudy" width="1200">
+            <img src="img/frontenddevcasestudy.png" alt="Porfoliocasestudy" width="1200">
         </div>
         
     </main>
