--- a/beanbuddy.html
+++ b/beanbuddy.html
@@ -20,8 +20,9 @@
               <ul id="menu" class="nav-items">
                 <li><a href="index.html">home</a></li>
                 <li><a href="index.html#work">my work</a></li>
+                <li> <a href="pdf/Catherine Abraham CV.pdf">my cv</a></li>
                 <li><a href="aboutme.html">about me</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="contact.html">contact</a></li>
                 <li>
                   <a href="javascript:void(0);" class="icon" onclick="menuToggle()">
                     <i class="fas fa-bars"></i>
