--- a/aboutme.html
+++ b/aboutme.html
@@ -46,8 +46,8 @@
 
         <div class="container">
             <section id="story" class="text">
-                <h2>this is me</h2>
-                <p> Hi there, I’m Cat<br>
+                <h2>Hi there!</h2>
+                <p> I’m Cat<br>
 <br>UX designer and passionate researcher with a background in recruitment, marketing strategy and language education. My work has always centred around people: understanding what they need, creating experiences that resonate and making sure nothing feels one-size-fits-all.<br><br>
 That’s what led me to UX. My ‘happy place’ is user research synthesis; uncovering what’s really going on beneath the surface and using those insights to design purposeful, intuitive solutions. Whether I’m building out user flows or refining a prototype, I approach every challenge with curiosity, structure and empathy.
 <br><br>Before design, I ran onboarding programs at CHANEL as the primary recruiter, created content and hosted community events at a retail developer and taught English to very energetic toddlers; I bring those same skills into my design work: clear communication, thoughtful organisation and the ability to adapt quickly.
