--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,7 @@ That’s what led me to UX. My ‘happy place’ is user research synthesis; unc
 <br><br>Outside of design, you’ll find me reading webtoons, dabbling in ceramics or on a never-ending quest to find the best flat white in town. 
 
                 </p>
-                <a href="Catherine Abraham CV.pdf" class="primary-button" target="_blank">My CV</a>
+                <a href="pdf/Catherine Abraham CV.pdf" class="primary-button" target="_blank">My CV</a>
             </section>
 
             <section id="skills-tools" class="text">
@@ -85,16 +85,16 @@ That’s what led me to UX. My ‘happy place’ is user research synthesis; unc
         </div>
     </main>
     
-    <footer id="contact">
-        <div>
-            <h2>Let's Chat!</h2>
-            <p>If you'd like to get in touch, drop me a line</p>
-            <a href="mailto:catherineabraham2@gmail.com">Send Me An Email</a>
-        </div>
-        <div>
-            <p>Copyright Catherine Abraham 2024-2025</p>
-        </div>
-    </footer>
+    <footer>
+    <div>
+      <h2>Let’s Chat!</h2>
+      <p>Prefer email? Reach me at:</p>
+      <a href="mailto:catherineabraham2@gmail.com">catherineabraham2@gmail.com</a>
+    </div>
+    <div>
+      <p>Copyright Catherine Abraham 2024–2025</p>
+    </div>
+  </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
