--- a/myportfolio.html
+++ b/myportfolio.html
@@ -48,16 +48,16 @@
     </main>
 
     <!-- Contact -->
-    <footer id="contact">
-        <div>
-            <h2>Let's Chat!</h2>
-            <p>If you'd like to get in touch, drop me a line</p>
-            <a href="mailto:catherineabraham2@gmail.com">Send Me An Email</a>
-        </div>
-        <div>
-            <p>&copy; Catherine Abraham 2024–2025</p>
-        </div>
-    </footer>
+    <footer>
+    <div>
+      <h2>Let’s Chat!</h2>
+      <p>Prefer email? Reach me at:</p>
+      <a href="mailto:catherineabraham2@gmail.com">catherineabraham2@gmail.com</a>
+    </div>
+    <div>
+      <p>Copyright Catherine Abraham 2024–2025</p>
+    </div>
+  </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 </body>
